tests/error/functions-2.moc
void main(int a, char a) {
}
